<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="pref_title"
        android:title="@string/pref_title_title"
        android:defaultValue="@string/pref_title_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    
    <com.killscreenshow.timeprogressextension.TimePreference
        android:key="pref_start"
        android:title="@string/pref_start_title"
        android:selectAllOnFocus="true" />
    
    <com.killscreenshow.timeprogressextension.TimePreference
        android:key="pref_end"
        android:title="@string/pref_end_title"
        android:selectAllOnFocus="true" />
    
    <EditTextPreference
        android:key="pref_boxes"
        android:title="@string/pref_boxes_title"
        android:defaultValue="@string/pref_boxes_default"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />
    
    <CheckBoxPreference
        android:key="pref_weekday"
        android:title="@string/pref_weekday_title"
        android:defaultValue="true" />

</PreferenceScreen>
